--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/node": "^16.11.22",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-use-localstorage": "^3.5.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
